# brainbot

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  LEARNINGS.md  README.md  architecture.md  current-plan-architecture.mermaid  design-history.md  mprocs.yaml  shared-brain-architecture.mermaid
.claude/: launch.json
.tasks/: index.json
.tasks/FEAT-20260510_134115-p1/: feature.json  index.json
.tasks/FEAT-20260510_134115-p1-5/: feature.json  index.json
.tasks/FEAT-20260510_134115-p2/: feature.json  index.json
.tasks/FEAT-20260510_134115-p2-5/: feature.json  index.json
.tasks/FEAT-20260510_134115-p3/: feature.json  index.json
.tasks/FEAT-20260510_134115-p4/: backlog.json  feature.json  index.json
.tasks/FEAT-20260510_134115-p4-5/: feature.json  index.json
.tasks/FEAT-20260531_144636-dsub/: feature.json  index.json
brain/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
brain/brain/: __init__.py  api.py  client.py  config.py  db.py  decompose.py  embed.py  legibility.py  notion.py  service.py  settings.py  store.py
brain/eval/: README.md  probes.json  recall_scorecard.py  run_ab.py
brain/tests/: conftest.py  test_changes.py  test_delete.py  test_doc.py  test_legibility.py  test_map.py  test_notion_fetch.py  test_notion_pages.py  test_sync.py
compose/: .env.example  Caddyfile  docker-compose.local.yml  docker-compose.yml  graphiti-config.yaml  oauth2-proxy-emails.txt.example
dashboard/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
dashboard/src/: apps.json  apps.ts  discover.ts  docs.ts  home.ts  main.ts  (+3 more)
docs/: README.md  app-platform.md  architecture.md  brain-architecture.md  brain.md  change-propagation.md  configuration-convention.md  consumer-api.md  consumer-integration.md  dashboard.md  deployment.md  embedder.md  genericity-rule.md  graph-database.md  graph-engine.md  how-it-works.md  human-edit-surface.md  learnings.md  llm-config.md  mcp-integration.md  memory-model.md  note-legibility.md  positioning.md  pwa.md  quickstart.md  rag-primer.md  storage-policy.md  value-prop.md  web-toolkit.md  what-to-sync.md  writing-legible-notes.md
migrate/: graphiti_clients.py  notion_clients.py  notion_to_graphiti.py
plans/: agent-task-support.md  document-substrate-exploration.md  graph-as-source-of-truth.md  map-source-descriptions.md  phase-1-graph-online.md  phase-1b-csv-loader.md  phase-2-decisions.md  phase-2-pwa-auth.md  phase-2-pwa-harness.md  phase-3-writeback.md  phase-4-hardening.md  recall-precision.md  scout-migration.md  scout-verdict-or-set.md  twitter-content-pipeline.md
pwa/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  tsconfig.server.json  vite.config.ts
scripts/: check_doc_links.py  ingest.py  reset_brain.py  smoke_brain.py  smoke_ingest.py  smoke_substrate.py  spike_decompose.py
web-toolkit/: README.md  package-lock.json  package.json  tsconfig.json
(+171 files in other folders)
