[project]
name = "brainbot-brain"
version = "0.1.0"
description = "The brain service — capture + recall over graphiti-core, called directly (no MCP server)."
requires-python = ">=3.11"
dependencies = [
    # Pinned to match the graphiti MCP image we already run (compose/graphiti).
    # The [anthropic,falkordb,voyageai] extras pull the provider SDKs the
    # direct-construction path needs (AnthropicClient, FalkorDriver, VoyageAIEmbedder).
    "graphiti-core[anthropic,falkordb,voyageai]==0.29.1",
    "anthropic>=0.104,<1",
    "mcp>=1.27,<2",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]
