[project]
name = "brainbot-brain"
version = "0.1.0"
description = "The brain service — a pgvector document substrate: ingest sources, recall/profile/map over section-chunks."
requires-python = ">=3.11"
dependencies = [
    # Document substrate: Postgres + pgvector (asyncpg driver + the pgvector
    # type adapter), Voyage for embeddings, and FastMCP (mcp) for the MCP face
    # + custom HTTP routes. No graphiti/FalkorDB, no LLM at write time.
    "asyncpg>=0.30,<1",
    "pgvector>=0.3,<1",
    "voyageai>=0.3,<1",
    "mcp>=1.27,<2",
    "uvicorn[standard]>=0.30,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain"]
